--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,11 @@
 name: Flutter CI
 
-# This workflow is triggered on pushes  and pull requests to the repository.
-
+# This workflow is triggered on pull requests to the repository.
 on:
-  push:
-    branches:
-    - main
   pull_request:
     branches:
     - main
-    - developemnt
 
-    
 jobs:
   build:
     # This job will run on ubuntu virtual machine
@@ -22,6 +16,8 @@ jobs:
     - uses: subosito/flutter-action@v1
       with:
         channel: 'stable' 
+
     # Statically analyze the Dart code for any errors.
-    - run: flutter analyze .
+    - name: Flutter Analyze
+      run: flutter analyze .
     
