Add fluter test job in workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,3 +21,6 @@ jobs:
     - name: Flutter Analyze
       run: flutter analyze .
     
+    # Run tests for flutter project
+    - name: Flutter Test
+      run: flutter test
