--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,9 @@ on:
       - main
 
 jobs:
-  build:
+  analyze:
     # This job will run on ubuntu virtual machine
+    name: Analyze
     runs-on: ubuntu-latest
     steps:
       # Init actions
@@ -28,6 +29,25 @@ jobs:
       # Statically analyze the Dart code for any errors.
       - name: Flutter Analyze
         run: flutter analyze .
+        
+  test:
+    # This job will run on ubuntu virtual machine
+    name: Test
+    runs-on: ubuntu-latest
+    steps:
+      # Init actions
+      - name: Start Workflow
+        uses: actions/checkout@v2
+
+      # Setup the flutter environment.
+      - name: Install Flutter
+        uses: subosito/flutter-action@v1
+        with:
+          channel: "stable"
+
+      # Restore packages
+      - name: Restore packages
+        run: flutter pub get
 
       # Run tests for flutter project
       - name: Flutter Test
