--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 1.1.0
 repository: https://github.com/jushutch/swiping_card_deck
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.15.0"
   flutter: ">=1.17.0"
 
 dependencies:
