--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: swiping_card_deck
 description: A widget for swiping through a deck of cards with gestures or buttons.
-version: 1.2.0
+version: 2.0.0-dev.0
 repository: https://github.com/jushutch/swiping_card_deck
 
 environment:
